# adk-samples

./: .gitignore  Makefile  README.md  eval_results.txt  evaluation_results.csv  extract_actuals.py  optimize_results.txt  pyproject.toml
.gemini/: settings.json
data/: golden_dataset_template.json
docs/: topics.md
docs/superpowers/plans/: 2025-01-24-define-specialized-data-models.md
scripts/: __init__.py  convert_dataset.py
src/: __init__.py  agent.py  eval.py  main.py
src/agents/: __init__.py  simple_agent.py
src/agents/complex_extractor/: __init__.py  agent.py
src/agents/layout_analyst/: __init__.py  agent.py
src/agents/layout_aware_agent/: __init__.py  agent.py  wrapper.py
src/agents/layout_aware_agent/analyst/: __init__.py  agent.py
src/agents/layout_aware_agent/extractor/: __init__.py
src/agents/simple_agent/: __init__.py  _patch.py  agent.py  wrapper.py
src/agents/structured_data_model/: __init__.py  generic_definition.py  layout_map.py
src/agents/topic_3_orchestrator/: __init__.py  agent.py  golden_evalset.evalset.json
src/optimization/: __init__.py  base.py  gepa.py  optimizer.py  reflection.py  selection.py
src/utils/: data_model.py  model.py  patch.py
tests/agents/structured_data_model/: test_generic_definition.py  test_layout_map.py
tests/eval/: eval_config.json  layout_aware_agent_sampler_config.json  optimizer_config.json  sampler_config.json  topic_3_sampler_config.json
tests/utils/: test_data_model.py
